2010-12-24  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	* src/src.pro:
	- updated a point version number. Official release 14.1.1.

	* src/src.pro:
	- disabled QtOpenGL.

2010-08-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* INSTALL:
	- updated by autotools.

	* configure.ac:
	- disabled glwidget by default.

2010-04-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* m4/ax_boost_base.m4:
	* m4/ax_boost_program_options.m4:
	- updated autoconf macros.

	* src/src.pro:
	- fixed build problems on OSX.

2010-03-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	* src/src.pro:
	- updated a minor version number. Official release 14.1.0.

	* src/log_player.cpp:
	* src/log_player.h:
	* src/main_window.cpp:
	* src/main_window.h:
	* src/monitor_client.cpp:
	* src/monitor_client.h:
	* src/options.cpp:
	* src/options.h:
	- implemented automatic reconnection.
	- added new options, "--auto-reconnect-mode" and "--auto-reconnect-wait".
	- changed the policy of configuration file generation.
	- renamed some parameters in rcssmonitor.conf.

2010-01-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/main.cpp:
	- updated the copyright message.

2009-12-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/config_dialog.cpp:
	* src/main_window.cpp:
	* src/player_type_dialog.cpp:
	- fixed a defect of shortcut key dialog on OSX.
	- fixd font size on OSX.
	- fixd layout on OSX.

	* NEWS:
	* configure.ac:
	* rcssmonitor.pro:
	- updated a point version number. Official release 14.0.1.

	* src/field_canvas.cpp:
	* src/main_window.cpp:
	* src/options.cpp:
	* src/src.pro:
	- fixed a defect of repainting region.
	- fixed the size of recovering animation.
	- fixed defects of default option value.ls

	* src/field_canvas.cpp:
	* src/main_window.cpp:
	* src/options.cpp:
	* src/options.h:
	- added parameter for the size of recovering animation.

2009-12-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>
